--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,3 +35,6 @@ jobs:
 
             - name: Build and push image
               run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-464318/notely-ar-repo/notely:latest .
+
+            - name: Deploy to Cloud Run
+              run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-464318/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-464318 --max-instances 4
