--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,9 +10,15 @@ jobs:
         runs-on: ubuntu-latest
         timeout-minutes: 30
 
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
+
+            - name: Install Goose
+              run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
             - name: Set up Go
               uses: actions/setup-go@v5
@@ -35,6 +41,9 @@ jobs:
 
             - name: Build and push image
               run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-464318/notely-ar-repo/notely:latest .
+
+            - name: Goose migration
+              run: ./scripts/migrateup.sh
 
             - name: Deploy to Cloud Run
               run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-464318/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-464318 --max-instances 4
